kubernetes/apps/downloads/qbittorrent/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lan-l4-qbittorrent
  labels:
    external-dns.alpha.kubernetes.io/registry: unifi
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.20.14
    - type: IPAddress
      value: ::ffff:192.168.20.14
  listeners:
    - name: bittorrent
      protocol: TCP
      port: 61267
      allowedRoutes:
        namespaces:
          from: Same
