kubernetes/apps/downloads/qbittorrent/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: qbittorrent
spec:
  parentRefs:
    - name: lan-l4-qbittorrent
      namespace: kube-system
      sectionName: bittorrent
  rules:
    - backendRefs:
        - name: qbittorrent-bittorrent
          port: 61267
